Refactored cards progress save; clean-up